fix for bug 482432, crash in nsImapMailFolderCopyState::OnStopRunningUrl, r/sr=neil